--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@google/genai": "^1.34.0",
     "three": "^0.182.0",
     "papaparse": "^5.4.1",
-    "recharts": "^2.12.0"
+    "recharts": "^2.12.0",
+    "firebase": "^12.7.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
